--- a/about.html
+++ b/about.html
@@ -17,12 +17,14 @@
 <body>
   <nav>
     <div class="container nav__container">
-      <a href="index.html"><h4>Pheliz Investment</h4></a>
+      <a href="index.html"><h1>Pheliz Investment</h1></a>
       <ul class="nav__menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="login.html" id="login-btn">Login</a></li>
+        <li><a href="signup.html" id="signup-btn">Sign Up</a></li>
       </ul>
       <button id="open-menu-btn"><i class="uil uil-list-ul"></i></button>
       <button id="close-menu-btn"><i class="uil uil-times"></i></button>
