--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <article class="category">
           <span class="category__icon"><i class="uil uil-globe"></i></span>
           <h4>Online Services</h4>
+          <img src="images/online-services.jpg" alt="Online Services">
           <ul>
             <li>Scanning and Printing</li>
             <li>Web development</li>
@@ -68,6 +69,7 @@
         <article class="category">
           <span class="category__icon"><i class="uil uil-pen"></i></span>
           <h4>Stationaries</h4>
+          <img src="images/stationaries.jpg" alt="Stationaries">
           <ul>
             <li>Pens, Pencils, and Erasers</li>
             <li>Notebooks and Diaries</li>
@@ -79,6 +81,7 @@
         <article class="category">
           <span class="category__icon"><i class="uil uil-globe"></i></span>
           <h4>Software Installation & Upgrade</h4>
+          <img src="images/software-installation.jpg" alt="Software Installation">
           <ul>
             <li>Operating Systems Installation</li>
             <li>Database Management System</li>
