--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pheliz Investment</title>
-  <link rel="stylesheet" href="../src/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="../dist/bundle.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
